--- a/Climate cards/card_climate_popup.yaml
+++ b/Climate cards/card_climate_popup.yaml
@@ -6,6 +6,7 @@ cards:
     name: ""
     show_header: true
   - type: vertical-stack
+    title: Kid's room
     cards:
       - type: picture
         image: /local/images/kids_room_real.jpg
@@ -21,6 +22,7 @@ cards:
             }
       - type: thermostat
         entity: climate.kid_s_room
+        name: " "
         features:
           - style: icons
             type: climate-hvac-modes
@@ -65,6 +67,43 @@ cards:
           style:
             hui-card-features$:
               hui-card-feature$:
+                hui-climate-fan-modes-card-feature$:
+                  ha-control-select$:
+                    div#option-1 ha-attribute-icon$:
+                      ha-icon$:
+                        ha-svg-icon$: |
+                          path {
+                            d: path("M15.6 15a.6.6 0 0 1-.6.6.6.6 0 0 1-.6-.6.6.6 0 0 1 1.2 0m-.6 0c-5.958 7.11-7.007 6.945-7.889 5.732C3.917 13.782 9.488 12.516 15 15") !important;
+                          }
+                    div#option-2 ha-attribute-icon$:
+                      ha-icon$:
+                        ha-svg-icon$: |
+                          path {
+                            d: path("M15.6 15a.6.6 0 0 1-.6.6.6.6 0 0 1-.6-.6.6.6 0 0 1 1.2 0M15 15c-5.959 7.11-7.006 6.944-7.888 5.731C3.917 13.782 9.487 12.516 15 15m0 0c-8.604-3.47-8.77-4.517-7.888-5.731C12.734 4.083 15.659 8.989 15 15") !important;
+                          }
+                    div#option-3 ha-attribute-icon$:
+                      ha-icon$:
+                        ha-svg-icon$: |
+                          path {
+                            d: path("M15.6 15a.6.6 0 0 1-.6.6.6.6 0 0 1-.6-.6.6.6 0 0 1 1.2 0M15 15c-5.959 7.11-7.006 6.944-7.888 5.731C3.917 13.782 9.487 12.516 15 15m0 0c-8.604-3.47-8.77-4.517-7.888-5.731C12.734 4.083 15.659 8.989 15 15m0 0c.641-9.255 1.586-9.736 3.013-9.273C24.683 9.471 20.92 13.769 15 15") !important;
+                          }
+                    div#option-4 ha-attribute-icon$:
+                      ha-icon$:
+                        ha-svg-icon$: |
+                          path {
+                            d: path("M15.6 15a.6.6 0 0 1-.6.6.6.6 0 0 1-.6-.6.6.6 0 0 1 1.2 0M15 15c9-2.25 9.75-1.5 9.75 0-1.5 7.5-6.75 5.25-9.75 0m0 0c-5.959 7.11-7.006 6.944-7.888 5.731C3.917 13.782 9.487 12.516 15 15m0 0c-8.604-3.47-8.77-4.517-7.888-5.731C12.734 4.083 15.659 8.989 15 15m0 0c.641-9.255 1.586-9.736 3.013-9.273C24.683 9.471 20.92 13.769 15 15") !important;
+                          }
+                    div#option-5 ha-attribute-icon$:
+                      ha-icon$:
+                        ha-svg-icon$: |
+                          path {
+                            d: path("M14.56 14a.56.56 0 0 1-.56.56.56.56 0 0 1-.56-.56.56.56 0 0 1 1.12 0M14 14c8.4-2.1 9.1-1.4 9.1 0-1.4 7-6.3 4.9-9.1 0m0 0c4.593 7.34 4.144 8.222 2.812 8.655-7.09.831-6.607-4.478-2.812-8.655m0 0c-5.561 6.636-6.539 6.481-7.362 5.349C3.656 12.863 8.855 11.682 14 14m0 0c-8.03-3.238-8.185-4.216-7.362-5.349C11.885 3.811 14.615 8.39 14 14m0 0c.599-8.638 1.481-9.087 2.812-8.655C23.037 8.84 19.525 12.851 14 14") !important;
+                          }
+                    .: >
+                      .container { --mdc-icon-size: 30px; }  .option { color:
+                      orange !important; }  .option.selected
+                      {--control-select-color: #0e4b15 !important;
+                      --icon-primary-color: white !important;}
                 hui-climate-swing-modes-card-feature$:
                   ha-control-select$:
                     div#option-auto ha-attribute-icon$:
@@ -109,3 +148,64 @@ cards:
                           path {
                             d: path("M11.2 5.4c1.3 2 2.7 3.6 3.1 3.6 1.2 0-2.9-6.4-4.3-6.8-.7-.3-.1 1.2 1.2 3.2M16 12c0 3.8-.1 7.3-.2 7.7-.2.3.7.7 2 .8 2.1.2 2.2-.2 2.2-7.7 0-7.1-.2-7.8-2-7.8s-2 .7-2 7M5 6.8c0 1 7 4.5 7.7 3.9.4-.4-6.3-4.7-7.3-4.7-.2 0-.4.4-.4.8m1.3 5.9c1.5.2 3.7.2 5 0 1.2-.2 0-.4-2.8-.4-2.7 0-3.8.2-2.2.4m2.5 3.1c-1.6.9-2.8 2-2.8 2.5 0 .9 5.6-1.9 6.5-3.3.9-1.5-.6-1.2-3.7.8m2.9 3.1c-1.9 3.2-2.1 4.1-.9 4.1.5 0 1.6-1.6 2.5-3.5 2-4.2.8-4.7-1.6-.6") !important;
                           }
+                    .: >
+                      .container { --mdc-icon-size: 28px; } .option { color:
+                      orange !important; }  .option.selected
+                      {--control-select-color: #0e4b15 !important;
+                      --icon-primary-color: white !important;}
+                hui-climate-swing-horizontal-modes-card-feature$:
+                  ha-control-select$:
+                    div#option-auto ha-attribute-icon$:
+                      ha-icon$:
+                        ha-svg-icon$: |
+                          path {
+                            d: path("") !important;
+                          }
+                    div#option-1_left ha-attribute-icon$:
+                      ha-icon$:
+                        ha-svg-icon$: |
+                          path {
+                            d: path("") !important;
+                          }
+                    div#option-2 ha-attribute-icon$:
+                      ha-icon$:
+                        ha-svg-icon$: |
+                          path {
+                            d: path("") !important;
+                          }
+                    div#option-3 ha-attribute-icon$:
+                      ha-icon$:
+                        ha-svg-icon$: |
+                          path {
+                            d: path("") !important;
+                          }
+                    div#option-4 ha-attribute-icon$:
+                      ha-icon$:
+                        ha-svg-icon$: |
+                          path {
+                            d: path("") !important;
+                          }
+                    div#option-5_right ha-attribute-icon$:
+                      ha-icon$:
+                        ha-svg-icon$: |
+                          path {
+                            d: path("") !important;
+                          }
+                    div#option-split ha-attribute-icon$:
+                      ha-icon$:
+                        ha-svg-icon$: |
+                          path {
+                            d: path("") !important;
+                          }
+                    div#option-swing ha-attribute-icon$:
+                      ha-icon$:
+                        ha-svg-icon$: |
+                          path {
+                            d: path("") !important;
+                          }
+                    .: >
+                      .container { --mdc-icon-size: 28px; } .option { color:
+                      orange !important; }  .option.selected
+                      {--control-select-color: #0e4b15 !important;
+                      --icon-primary-color: white !important;}
+
