--- a/Teamtracker/card_team_tracker.yaml
+++ b/Teamtracker/card_team_tracker.yaml
@@ -10,26 +10,28 @@ cards:
     filter:
       template: |
         {%- for team in integration_entities("teamtracker") -%}
-          {%- if states(team) == "PRE" -%}
+          {%- if states(team) == "PRE" and state_attr(team, "league") != "F1" -%}
+           {%- if not (state_attr(team, 'team_id') == "371" and state_attr(team, 'opponent_id') == "360") -%}
            {%- if (as_timestamp(state_attr(team, 'date')) - as_timestamp(now())) < 259200 -%}
-            {%- if state_attr(team, "league") == "XXX" -%}
-              {%- set title = state_attr(team, "season") -%}
-            {%- else -%}
-              {%- set title = state_attr(team, "league") -%} 
-            {%- endif -%}
-            {{{"type": "custom:teamtracker-card",
-              "entity": team,
-              "home_side": "left",
-              "show_rank": "true",
-              "card_title": title,
-              "show_timeouts": "false",
-              "team_url": "more-info",
-              "opponent_url": "more-info",
-              "card_mod": {
-                "style": "ha-card { box-shadow: 0 0 4px 1px orange; width: 350px; } .gameday {visibility: hidden; } .gameday::after { visibility: visible; content: ' '; display:block; height: 50px; background: url({{state_attr(config.entity, 'league_logo')}}) no-repeat center; background-size: 35%; opacity: 0.9; position: relative; bottom: 30px; } .team { font-size: 12px; } .record { color: rgba(223, 175, 114); padding-top: 5px; } .line { display: none;} div.pre-series-info { display: none;} .bottom-clickable {display: none;} .title {font-size: 22px !important;} .gametime { display: none; } .card div {margin-top: -5px !important; margin-bottom: -3px  !important;} .gamedate { visibility: hidden; padding-top: 30px !important; } .gamedate::after { visibility: visible; font-size: 20px !important; opacity: 0.99; content: '{{as_timestamp((as_datetime(state_attr(config.entity, 'date')) + timedelta(hours=3))) | timestamp_custom('%d %B %H:%M', false) }}'; }"
-                }
-              }}},
-            {%- endif -%}
+             {%- if state_attr(team, "league") == "XXX" -%}
+               {%- set title = state_attr(team, "season") -%}
+             {%- else -%}
+               {%- set title = state_attr(team, "league") -%} 
+             {%- endif -%}
+             {{{"type": "custom:teamtracker-card",
+               "entity": team,
+               "home_side": "left",
+               "show_rank": "true",
+               "card_title": title,
+               "show_timeouts": "false",
+               "team_url": "more-info",
+               "opponent_url": "more-info",
+               "card_mod": {
+                 "style": "ha-card { box-shadow: 0 0 4px 1px orange; width: 360px;  } .gameday {visibility: hidden; } .gameday::after { visibility: visible; content: ' '; display:block; height: 50px; background: url({{state_attr(config.entity, 'league_logo')}}) no-repeat center; background-size: 35%; opacity: 0.9; position: relative; bottom: 30px; } .team { font-size: 12px; } .record { color: rgba(223, 175, 114); padding-top: 5px; } .line { display: none;} div.pre-series-info { display: none;} .bottom-clickable {display: none;} .title {font-size: 22px !important; } .gametime { display: none; } .card div {margin-top: -12px !important; } .gamedate { visibility: hidden; padding-top: 30px !important; } .gamedate::after { visibility: visible; font-size: 20px !important; opacity: 0.99; content: '{{as_timestamp((as_datetime(state_attr(config.entity, 'date')) + timedelta(hours=3))) | timestamp_custom('%d %B %H:%M', false) }}'; }"
+                 }
+               }}},
+             {%- endif -%}
+           {%- endif -%}
           {%- endif -%}
         {%- endfor -%}
       exclude:
